# python202503perf

./: .gitignore  Iterations.ipynb  Readme.md  fibonacci.py  pythonObjects.ipynb
GeometryProject/: Readme.md  main.py  notebook_geometry.ipynb  play_with_mesurable.py
GeometryProject/geometry/: __init__.py  circle.py  line.py  mesurable.py  point.py  point_historic.py  polygon.py  shape.py
GeometryProject/tests/geometry/: conftest.py  test_circle.py  test_colored_point.py  test_colored_weighted_point.py  test_point.py  test_polygon.py  test_segment.py  test_weighted_point.py
PooGeneral/: Functions.ipynb  Iterations.ipynb  data_iterable.py  fibonacci.py  notebook_decorator.ipynb  notebook_pandas.ipynb  notebook_pandas2.ipynb  pythonObjects.ipynb  test_fibonacci.py
bigproject/: README.md  pyproject.toml
bigproject/bigproject/: mylib.py
bigproject/tests/: test_mylib.py
presentation/: schemas.excalidraw
simpleproject/: Readme.md
