[tool.poetry]
name = "bigproject"
version = "0.1.0"
description = ""
authors = ["matthcol <matthias.colin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
